# kabi-chat

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.codex/prompts/: autodev.md
.github/workflows/: backend-apps-tests.yml  deploy-prod.yml  frontend-build.yml
backend/: Dockerfile  Dockerfile.prod  README.md  entrypoint.sh  pyproject.toml
backend/apps/auth/: apps.py  authentication.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/auth/migrations/: 0001_initial.py
backend/apps/channels/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/apps/channels/migrations/: 0001_initial.py
backend/apps/macros/: apps.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/macros/migrations/: 0001_initial.py
backend/apps/messages/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/messages/migrations/: 0001_initial.py
backend/apps/workspaces/: apps.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/workspaces/migrations/: 0001_initial.py  0002_workspaceinvite.py
backend/config/: settings.py  urls.py
docs/agent-chat-rule/: auto-develop.md  git-contribution.md
docs/architecture/: auth.md  backend.md  frontend.md  infra.md  overview.md
docs/contribution/: github-description.md
docs/dev-workflow/: autodev.md  backend.md  code-review.md  prod-deploy.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
(+54 files in other folders)
